...
                                        </constraints>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain" title="KYC Component"/>
                                        <connections>
                                            <action selector="didTapKYCButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="kRc-Vm-xj8"/>
...
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cybrid_white" translatesAutoresizingMaskIntoConstraints="NO" id="rWa-BH-Roz">
                                <rect key="frame" x="30" y="98" width="354" height="50"/>
                                <accessibility key="accessibilityConfiguration" identifier="login_image"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="RtC-wb-BqA"/>
...
                                <rect key="frame" x="40" y="248" width="334" height="50"/>
                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="clientID"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="82m-fc-5rj"/>
...
                                <rect key="frame" x="40" y="313" width="334" height="50"/>
                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="clientSecret"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="rbh-mb-1T7"/>
...
                                <rect key="frame" x="40" y="378" width="334" height="50"/>
                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="customerGUID"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="sdf-t8-hYe"/>
...
                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please fill all the fields" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OO4-iE-FhO">
                                <rect key="frame" x="30" y="468" width="354" height="24"/>
                                <accessibility key="accessibilityConfiguration" identifier="login_error"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="24" id="mur-Kg-SBK"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bDR-4B-oyo">
                                <rect key="frame" x="30" y="554.5" width="354" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="demo_mode"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="YYU-Z4-lah"/>
...
                                <rect key="frame" x="40" y="497" width="334" height="50"/>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="login_button"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="qKI-Tz-ANH"/>
...
